--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,8 @@ jobs:
     
       - name: Install Bitcoin
         run: |
-            sudo apt update && sudo apt upgrade
+            sudo apt update
             sudo add-apt-repository ppa:luke-jr/bitcoincore
-            sudo apt-get update
             sudo apt-get install bitcoind
 
       - name: Check bitcoind setup with version
@@ -34,6 +33,8 @@ jobs:
             rpcallowip=127.0.0.1
             EOF
             bitcoind -regtest -rpcport=18444
+            sleep 5
+            bitcoind -regtest -rpcport=18445
             sleep 5
 
       - name: Run
