--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,37 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Install Protobuf Compiler
+    
+      - name: Install Bitcoin
         run: |
-          sudo apt-get update
-          sudo apt-get install -y protobuf-compiler
+            sudo apt update
+            sudo add-apt-repository ppa:luke-jr/bitcoincore
+            sudo apt-get install bitcoind
+
+      - name: Check bitcoind setup with version
+        run: bitcoind --version
+       
+      - name: Config and start Bitcoin nodes
+        run: |
+            mkdir ~/.bitcoin/
+            cat << EOF >> ~/.bitcoin/bitcoin.conf
+            regtest=1
+            daemon=1
+            rpcuser=username
+            rpcpassword=password
+            rpcallowip=127.0.0.1
+            EOF
+            bitcoind -regtest
+            sleep 5
+
+      - name: Run
+        run: cargo run
+      
+      - name: Test
+        run: cargo test
+
+      - name: Stop bitcoin node
+        run: bitcoin-cli -regtest stop
       
       - name: Clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
